public/content/@ks-qkcp/v4.1/04-platform-management/03-platform-settings/02-license/01-view-license-information.adoc
---
title: "查看许可证信息"
keywords: "Kubernetes, {ks_product}, 平台设置, 许可证, 查看许可证信息"
description: "介绍如何查看许可证信息。"
weight: 01
---

:ks_navigation: **许可证**
:ks_permission: **平台设置管理**


本节介绍如何查看许可证信息。


== 前提条件


:relfileprefix: ../../../../

include::../../../../_custom/platformManagement/platformManagement-prer-requiredPermission_v4.adoc[]

:relfileprefix: ./


== 操作步骤

include::../../../../_custom/platformManagement/platformManagement-oper-logIn.adoc[]

. 在页面右上角点击image:/images/ks-qkcp/zh/icons/cogwheel.svg[cogwheel,18,18]进入**平台设置**页面。

+

include::../../../../../_ks_components/oper-navigate.adoc[]
+
. 在**许可证信息**页签，查看{ks_product_both}和已安装扩展组件的许可证。
+
====
* {ks_product_both}许可
+
[%header,cols="1a,4a"]
|===
|参数 |描述

|授权组织
|被授权使用{ks_product_both}的组织。

|授权状态
|
* **未授权**：未获得{ks_product_both}的许可证。
* **授权已过期**：{ks_product_left}的许可证已过期。
* **授权数量不足**：当前集群规模超出被许可使用{ks_product_both}的集群规模。
* **已授权**：{ks_product_left}授权正常。

|维保状态
|
* **无维保**：不享受维保服务。
* **维保过期**：维保服务已过期。
* **维保中**：在维保服务期内。

|集群 ID
|当前集群 ID，用于判断集群是否享有授权。

|授权类型
|**未输入激活码**、**订阅**或**永久授权**。

|授权用量
|显示当前集群规模以及被许可使用{ks_product_both}的集群规模，单位为**核**。

|生效时间
|许可证的生效时间。

|截止时间
|许可证的过期时间。
|===

* 扩展组件许可
+
--
显示当前平台已安装的扩展组件的许可证。

[%header,cols="1a,4a"]
|===
|参数 |描述

|名称
|扩展组件的名称。

|授权状态
|
* **未授权**：未获得{ks_product_both}的许可证。
* **授权已过期**：{ks_product_left}的许可证已过期。
* **已授权**：{ks_product_left}授权正常。

|授权类型
|**未输入激活码**、**订阅**或**永久授权**。

|授权单位
|CPU 或 vCPU。

|授权用量
|显示当前集群规模以及被许可使用{ks_product_both}的集群规模，单位为**核**。

|生效时间
|许可证的生效时间。

|截止时间
|许可证的过期时间。
|===

* 在列表上方点击搜索框并输入组件名称，可搜索组件的许可证。

include::../../../../../_ks_components/oper-refreshListData.adoc[]

include::../../../../../_ks_components/oper-customizeColumns.adoc[]
--
====